# orchestration

./: .gitignore  DOCUMENTATION.md  README.md  deploy.sh
.github/workflows/: ci.yml
backend/: .env  Dockerfile  oz.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  ws_manager.py
backend/app/models/: agent.py  agent_command_audit.py  agent_file.py  audit.py  conversation.py  log.py  schedule.py  secret.py  server.py  skill.py  user.py
backend/app/routes/: agents.py  auth.py  chat.py  dashboard.py  schedules.py  secrets.py  servers.py  skills.py
backend/app/services/: agent_runner.py  audit_service.py  multi_repo.py  scheduler_service.py  secret_service.py  server_service.py  skill_service.py
backend/app/worker/: scheduler.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_schedules.py  test_secrets.py  test_skills.py
cli/: pyproject.toml
cli/ozcli/: main.py
docker/: .env.example  docker-compose.override.yml  docker-compose.yml  nginx.conf
docker/agent/: Dockerfile  entrypoint.sh  opencode-config.json  oz_local_agent.py
docker/leon/: Dockerfile
docker/llama-cpp/: Dockerfile  docker-entrypoint.sh
leon/: docker-entrypoint.sh  package.json  pnpm-lock.yaml
leon/app/src/js/: chatbot.js
leon/aurora/src/: index.ts
leon/aurora/src/components/code-card/: code-card.sass  code-card.tsx  index.ts
leon/aurora/src/components/markdown/: markdown.sass  markdown.tsx
leon/scripts/setup/: setup.js
leon/server/src/core/brain/: logic-action-skill-handler.ts
leon/server/src/core/llm-manager/: llm-provider-account-configs.ts  llm-provider.ts  types.ts
leon/skills/native/is_it_down_skill/: skill.json
leon/skills/native/oz_skill/: skill.json
leon/skills/native/oz_skill/locales/: en.json
scripts/: test-groq-key.sh  test-openrouter-key.sh
web/: index.html
(+19 files in other folders)
