[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oz-backend"
version = "0.1.0"
description = "Oz — Agent Orchestration Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "alembic==1.13.2",
    "asyncpg==0.30.0",
    "redis==5.1.1",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "websockets==13.1",
    "docker==7.1.0",
    "celery==5.4.0",
    "croniter==3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "aiosqlite>=0.20",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]
ignore = ["B008", "UP017", "UP042", "SIM105", "SIM116"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["app.*"]
ignore_errors = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
