[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ozcli"
version = "0.1.0"
description = "Oz CLI — agent orchestration control"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
]

[project.scripts]
oz = "ozcli.main:app"
